--- a/styleV5.css
+++ b/styleV5.css
@@ -3,8 +3,22 @@
     padding: 0;
     border: 0;
 }
-.ImageCabeçario{
 
+
+.ImageCabecario{
+  
+    background-size: cover;
+    height: 500px;
+    background: url(murala1.jpg) no-repeat;
+    background-size: 97%;
+    align-items: center;
+    max-height: 900px;
+    border-radius: 5px;
+    margin-left: 2rem;
+    margin-top: 0rem;
+  
+
+ 
 }
 .logo{
 
@@ -19,11 +33,24 @@
     
     
 }
-.CorpoFoto{
+
+.CorpoTexto{
+ margin-top: 18rem;
+ margin-left: 2rem;
+ margin-right: 2rem;
 
 }
-.CorpoTexto{
+.CorpoFoto{
+   
+    height: 800px;
+    background: url(./clientes.jpg) no-repeat;
+    background-size: 90%;
+  
+    max-height: 900px;
 
+    margin-left: 7rem;
+   
+    margin-top: 8rem;
 }
 .FoterLogo{
 
@@ -38,6 +65,7 @@
 
 }
 form{
+    margin-top: 10rem;
     margin-top: 5rem;
     margin-left: 1rem;
   }
@@ -48,6 +76,11 @@ form{
     width: 150px;
     margin-top: -78px;
     margin-left: 28rem;
+  }
+  .ajusteDaTextArea{
+ 
+    margin-right: 48rem;
+   
   }
 
 @media screen and (max-width: 500px) {
