--- a/styleV5.css
+++ b/styleV5.css
@@ -103,6 +103,21 @@ form{
     width: 37rem;
    margin-top: -1rem;
   }
+h3{
+  font-family: 'Bebas Neue', cursive;
+font-family: 'Josefin Sans', sans-serif;
+font-family: 'Montserrat', sans-serif;
+color: rgb(0,60,144);
+
+}
+button{
+  font-family: 'Bebas Neue', cursive;
+  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  background-color: rgb(0,60,144);
+  color: white;
+  width: 150px;
+}
 
 @media screen and (max-width: 1000px) {
  
