--- a/styleV5.css
+++ b/styleV5.css
@@ -4,10 +4,10 @@
   border: 0;
 }
 
-body {
+ body {
   background-image: url(./grade2.png);
   background-size: auto;
-}
+} 
 
 .ImageCabecario {
 
@@ -55,8 +55,8 @@ li {
 
 .CorpoTexto {
   margin-top: 20rem;
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 11.5rem;
+   margin-right: 6.5rem; 
   font-size: 20px;
 
 
@@ -100,17 +100,17 @@ form {
   margin-left: 12rem;
 }
 
-.ajusteInputAreaEmail {
+.ajusteInputAreaNome {
   width: 430px;
 }
 
-.ajusteInputAreaPassowd {
+.ajusteInputAreaTelefone {
   width: 150px;
   margin-top: -78px;
-  margin-left: 27rem;
+  margin-left: 27.7rem;
 }
 
-.ajusteDaTextArea {
+.ajusteDaTextMensagem {
 
   width: 37rem;
   margin-top: -1rem;
@@ -132,6 +132,31 @@ button {
   color: white;
   width: 150px;
 }
+.NavLadoDireito  ul li {
+  font-family: 'Bebas Neue', cursive;
+  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  color:rgb(0, 60, 144);
+  margin-left: 70rem;
+  padding: 0px;
+   height: 30px; 
+  font-size: 12px;
+}
+.NavLadoDireito {
+  margin-top: 3rem;
+}
+.contato{
+  font-family: 'Bebas Neue', cursive;
+  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  color:rgb(0, 60, 144);
+  margin-left: 70rem;
+  font-size: 13px; 
+  margin-top: -5rem;
+
+
+} 
+
 
 @media screen and (max-width: 1000px) {
 
@@ -169,18 +194,18 @@ button {
 
   }
 
-  .ajusteInputAreaEmail {
+  .ajusteInputAreaNome{
     width: 280px;
   }
 
-  .ajusteInputAreaPassowd {
+  .ajusteInputAreaTelefone {
     width: 165px;
     margin-left: 290px;
     margin-top: -70px;
 
   }
 
-  .ajusteDaTextArea {
+  .ajusteDaTextMensagem{
 
     width: 28.5rem;
     margin-top: -1rem;
